--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@
 			camera_longitudeArray = [];
 			camera_data.forEach((data) => {
 				const { latitude, longitude, car_num } = data;
-				var num = car_num * 2;
+				var num = car_num;
 				camera_latitudeArray.push(latitude);
 				camera_longitudeArray.push(longitude);
 				camera_car_number.push(num);
@@ -869,7 +869,7 @@
 			const data = window.processData;
 			data.forEach((data) => {
 				const { latitude, longitude, car_num } = data;
-				var num = car_num * 2;
+				var num = car_num;
 				console.log("Latitude:", latitude);
 				console.log("Longitude:", longitude);
 				console.log("Car Number:", num);
